--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -3,13 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>demos-parent</artifactId>
-      <groupId>io.osmosis.demos</groupId>
+      <artifactId>platform</artifactId>
+      <groupId>io.osmosis</groupId>
       <version>0.1.0-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>creditInc-parent</artifactId>
+   <groupId>io.osmosis.demos</groupId>
+   <artifactId>demos-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
 
@@ -23,12 +25,9 @@
       This demo illustrates how Osmosis can be used in non-trivial scnearios.
    </description>
    <modules>
-      <module>credit-markup-service</module>
-      <module>rate-conversion-service</module>
-      <module>isic-lookup-service</module>
-      <module>invoice-app</module>
-      <module>discovery-server</module>
-      <module>client-lookup-service</module>
+      <module>creditInc</module>
+      <module>fx-conversion</module>
+      <module>trade-compliance</module>
    </modules>
 
    <dependencies>
