--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
-      <module>demos/creditInc</module>
+      <module>demos</module>
       <module>polymer-parent</module>
    </modules>
 
@@ -21,7 +21,7 @@
 
    <properties>
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-      <kotlin.version>1.2.10</kotlin.version>
+      <kotlin.version>1.2.51</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
