--- a/demos/trade-compliance/common/pom.xml
+++ b/demos/trade-compliance/common/pom.xml
@@ -17,6 +17,10 @@
          <artifactId>taxi-annotation-processor</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
    </dependencies>
 
    <build>
