--- a/polymer-parent/polymer/pom.xml
+++ b/polymer-parent/polymer/pom.xml
@@ -18,6 +18,12 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.skyscreamer</groupId>
+         <artifactId>jsonassert</artifactId>
+         <version>1.5.0</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>compiler</artifactId>
          <version>0.1.0-SNAPSHOT</version>
