--- a/demos/trade-compliance/feature-test/pom.xml
+++ b/demos/trade-compliance/feature-test/pom.xml
@@ -23,7 +23,11 @@
          <artifactId>rules-provider</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
-
+      <dependency>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>polymer</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer</artifactId>
