--- a/demos/trade-compliance/rule-aggregator/pom.xml
+++ b/demos/trade-compliance/rule-aggregator/pom.xml
@@ -79,6 +79,46 @@
                      </annotationProcessorPaths>
                   </configuration>
                </execution>
+               <execution>
+                  <id>compile</id>
+                  <goals>
+                     <goal>compile</goal>
+                  </goals>
+                  <configuration>
+                     <sourceDirs>
+                        <sourceDir>src/main/java</sourceDir>
+                     </sourceDirs>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.5.1</version>
+            <executions>
+               <!-- Replacing default-compile as it is treated specially by maven -->
+               <execution>
+                  <id>default-compile</id>
+                  <phase>none</phase>
+               </execution>
+               <!-- Replacing default-testCompile as it is treated specially by maven -->
+               <execution>
+                  <id>default-testCompile</id>
+                  <phase>none</phase>
+               </execution>
+               <execution>
+                  <id>java-compile</id>
+                  <phase>compile</phase>
+                  <goals>
+                     <goal>compile</goal>
+                  </goals>
+               </execution>
+               <execution>
+                  <id>java-test-compile</id>
+                  <phase>test-compile</phase>
+                  <goals> <goal>testCompile</goal> </goals>
+               </execution>
             </executions>
          </plugin>
       </plugins>
