--- a/polymer-parent/pom.xml
+++ b/polymer-parent/pom.xml
@@ -33,4 +33,12 @@
 
    <dependencies>
    </dependencies>
+
+   <repositories>
+      <repository>
+         <id>central</id>
+         <name>bintray</name>
+         <url>http://jcenter.bintray.com</url>
+      </repository>
+   </repositories>
 </project>
