--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -36,4 +36,39 @@
          <scope>compile</scope>
       </dependency>
    </dependencies>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+         </plugin>
+         <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <version>1.6</version>
+            <configuration>
+               <workingDirectory>src/main/web/</workingDirectory>
+               <nodeVersion>v10.6.0</nodeVersion>
+            </configuration>
+            <executions>
+               <execution>
+                  <id>install-npm</id>
+                  <goals>
+                     <goal>install-node-and-npm</goal>
+                  </goals>
+               </execution>
+               <execution>
+                  <id>npm-build</id>
+                  <goals>
+                     <goal>npm</goal>
+                  </goals>
+                  <configuration>
+                     <arguments>run-script build</arguments>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </build>
 </project>
