--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -14,6 +14,10 @@
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
+   <scm>
+      <developerConnection>scm:git:git@gitlab.com:vyne/vyne.git</developerConnection>
+   </scm>
+
    <properties>
       <jackson.version>2.9.3</jackson.version>
       <taxi.version>0.1.2</taxi.version>
