--- a/vyne-parent/schema-store-client/pom.xml
+++ b/vyne-parent/schema-store-client/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>vyne-parent</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store-client</artifactId>
-   <version>0.1.0-SNAPSHOT</version>
+   <version>0.1.0</version>
 
 
    <dependencies>
@@ -22,12 +20,12 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>0.1.0</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>0.1.0</version>
       </dependency>
       <dependency>
          <groupId>io.projectreactor</groupId>
