--- a/vyne-parent/vyne-client-spring/pom.xml
+++ b/vyne-parent/vyne-client-spring/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +14,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-client</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>0.1.0</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
