--- a/vyne-parent/vyne/pom.xml
+++ b/vyne-parent/vyne/pom.xml
@@ -97,6 +97,15 @@
                </execution>
             </executions>
          </plugin>
+         <!-- Do not generate a source jar -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+            <version>3.0.1</version>
+            <configuration>
+               <skipSource>true</skipSource>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
 </project>
