--- a/vyne-parent/vyne-spring-schemaStore/pom.xml
+++ b/vyne-parent/vyne-spring-schemaStore/pom.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.1-SNAPSHOT</version>
+      <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring-schemaStore</artifactId>
-   <version>0.1.1-SNAPSHOT</version>
+   <version>0.1.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store</artifactId>
-         <version>0.1.1-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.1.1-SNAPSHOT</version>
+         <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
 </project>
