--- a/vyne-parent/vyne-query-service/pom.xml
+++ b/vyne-parent/vyne-query-service/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <groupId>io.vyne</groupId> 
       <artifactId>vyne-parent</artifactId>
-      <version>0.1.1-SNAPSHOT</version>
+      <version>0.1.1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +16,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.1.1-SNAPSHOT</version>
+         <version>0.1.1</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
