--- a/vyne-parent/vyne-spring-schemaStore/pom.xml
+++ b/vyne-parent/vyne-spring-schemaStore/pom.xml
@@ -3,23 +3,23 @@
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.1</version>
+      <version>0.1.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring-schemaStore</artifactId>
-   <version>0.1.1</version>
+   <version>0.1.2-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store</artifactId>
-         <version>0.1.1</version>
+         <version>0.1.2-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-spring</artifactId>
-         <version>0.1.1</version>
+         <version>0.1.2-SNAPSHOT</version>
       </dependency>
    </dependencies>
 </project>
