--- a/vyne-parent/vyne-spring/pom.xml
+++ b/vyne-parent/vyne-spring/pom.xml
@@ -3,12 +3,12 @@
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.2-SNAPSHOT</version>
+      <version>0.1.2</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring</artifactId>
-   <version>0.1.2-SNAPSHOT</version>
+   <version>0.1.2</version>
 
    <dependencies>
       <dependency>
@@ -19,7 +19,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.2-SNAPSHOT</version>
+         <version>0.1.2</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
@@ -32,7 +32,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-client</artifactId>
-         <version>0.1.2-SNAPSHOT</version>
+         <version>0.1.2</version>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
@@ -50,7 +50,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.1.2-SNAPSHOT</version>
+         <version>0.1.2</version>
       </dependency>
       <dependency>
          <groupId>com.hazelcast</groupId>
