--- a/vyne-parent/schema-store-client/pom.xml
+++ b/vyne-parent/schema-store-client/pom.xml
@@ -3,12 +3,12 @@
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>vyne-parent</artifactId>
-      <version>0.1.2</version>
+      <version>0.1.3-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>schema-store-client</artifactId>
-   <version>0.1.2</version>
+   <version>0.1.3-SNAPSHOT</version>
 
 
    <dependencies>
@@ -20,12 +20,12 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.1.2</version>
+         <version>0.1.3-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.2</version>
+         <version>0.1.3-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.projectreactor</groupId>
