--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>io.vyne</groupId>
@@ -14,22 +15,23 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.5.3.RELEASE</version>
+      <version>2.0.5.RELEASE</version>
    </parent>
 
    <properties>
       <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-      <kotlin.version>1.2.60</kotlin.version>
+      <kotlin.version>1.2.71</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
-      <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
+      <spring.cloud.version>Finchley.SR1</spring.cloud.version>
+      <spring.cloud.netflix.version>2.0.1.RELEASE</spring.cloud.netflix.version>
       <jackson.version>2.9.3</jackson.version>
    </properties>
 
    <scm>
       <developerConnection>scm:git:git@gitlab.com:vyne/vyne.git</developerConnection>
-     <tag>HEAD</tag>
-  </scm>
+      <tag>HEAD</tag>
+   </scm>
 
    <dependencies>
       <dependency>
@@ -162,6 +164,20 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix</artifactId>
             <version>${spring.cloud.netflix.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>${spring.cloud.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign</artifactId>
+            <version>2.0.1.RELEASE</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
