--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>platform</artifactId>
       <groupId>io.vyne</groupId>
@@ -14,7 +15,7 @@
 
    <properties>
       <jackson.version>2.9.3</jackson.version>
-      <taxi.version>0.1.2</taxi.version>
+      <taxi.version>0.1.3-SNAPSHOT</taxi.version>
    </properties>
    <modules>
       <module>vyne</module>
