--- a/vyne-parent/schema-store-api/pom.xml
+++ b/vyne-parent/schema-store-api/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <groupId>io.vyne</groupId>
       <artifactId>vyne-parent</artifactId>
@@ -12,19 +13,23 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-openfeign</artifactId>
+      </dependency>
+
+      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-webmvc</artifactId>
          <scope>provided</scope>
       </dependency>
-      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-netflix-core</artifactId>
-      </dependency>
+      <!--<dependency>-->
+      <!--<groupId>org.springframework.cloud</groupId>-->
+      <!--<artifactId>spring-cloud-netflix-core</artifactId>-->
+      <!--</dependency>-->
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
          <version>0.1.3-SNAPSHOT</version>
       </dependency>
    </dependencies>
-
 </project>
