--- a/vyne-parent/vyne-spring/pom.xml
+++ b/vyne-parent/vyne-spring/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
@@ -35,8 +36,16 @@
          <version>0.1.3-SNAPSHOT</version>
       </dependency>
       <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-web</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-feign</artifactId>
+         <artifactId>spring-cloud-starter-openfeign</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
