--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -15,7 +15,7 @@
 
    <properties>
       <jackson.version>2.9.3</jackson.version>
-      <taxi.version>0.1.3-SNAPSHOT</taxi.version>
+      <taxi.version>0.1.3</taxi.version>
    </properties>
    <modules>
       <module>vyne</module>
