--- a/vyne-parent/vyne-client-spring/pom.xml
+++ b/vyne-parent/vyne-client-spring/pom.xml
@@ -3,7 +3,7 @@
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.3-SNAPSHOT</version>
+      <version>0.1.3</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
@@ -14,7 +14,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-client</artifactId>
-         <version>0.1.3-SNAPSHOT</version>
+         <version>0.1.3</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
