--- a/vyne-parent/vyne-spring/pom.xml
+++ b/vyne-parent/vyne-spring/pom.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>vyne-parent</artifactId>
       <groupId>io.vyne</groupId>
-      <version>0.1.3-SNAPSHOT</version>
+      <version>0.1.3</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>vyne-spring</artifactId>
-   <version>0.1.3-SNAPSHOT</version>
+   <version>0.1.3</version>
 
    <dependencies>
       <dependency>
@@ -20,7 +19,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne</artifactId>
-         <version>0.1.3-SNAPSHOT</version>
+         <version>0.1.3</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
@@ -33,7 +32,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-client</artifactId>
-         <version>0.1.3-SNAPSHOT</version>
+         <version>0.1.3</version>
       </dependency>
       <dependency>
          <groupId>org.springframework</groupId>
@@ -59,7 +58,7 @@
       <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
-         <version>0.1.3-SNAPSHOT</version>
+         <version>0.1.3</version>
       </dependency>
       <dependency>
          <groupId>com.hazelcast</groupId>
